--- a/vk-hosting-config.json
+++ b/vk-hosting-config.json
@@ -1,6 +1,6 @@
 {
   "static_path": "build",
-  "app_id": 52425532,
+  "app_id": 00000,
   "endpoints": {
     "mobile": "index.html",
     "mvk": "index.html",
